<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calorie</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="form_gender">Gender :</string>
    <string name="form_male">Male</string>
    <string name="form_female">Female</string>
    <string name="form_age">Age :</string>
    <string name="years_old">years old</string>
    <string name="form_height">Height :</string>
    <string name="cm">cm</string>
    <string name="form_weight">Weight :</string>
    <string name="kg">kg</string>
    <string name="calculate">Calculate</string>
    <string name="change_language">Change Language</string>

    <string name="success_save_title">Menu Saved!</string>
    <string name="for_text_view">for</string>
    <string name="button_see_all_menus">See all menus</string>
    <string name="button_make_another_menu">Make another menu</string>
    <string name="title_activity_list_menu">List of Menus</string>
    <string name="title_activity_detail_menu">Your menu for</string>

    <string name="your_food_today">Calorie: Your food for today</string>

    <string name="being_a">Being a\u0020</string>
    <string name="of_age">\u0020of age\u0020</string>
    <string name="the_height_of">the height of\u0020</string>
    <string name="the_weight_of">and the weight of\u0020</string>

    <string name="your_bmr_is">Your BMR is</string>
    <string name="lets_proceed">Now let\'s proceed to</string>
    <string name="pick_my_menus">PICK MY \nMENUS</string>

    <string name="pick_your_menu">Pick Your Menu</string>
    <string name="total_cal_so_far">Total calories so far:\u0020</string>
    <string name="still_need">You still need\u0020</string>
    <string name="space_calories">\u0020calories</string>
    <string name="pick_a_date">PICK \nA DATE</string>

    <string name="your_menu">Your Menu</string>
    <string name="simply_pick_a_date">Pick a Date</string>
    <string name="save">SAVE</string>

    <string name="curious"><u>Curious about your BMI?</u></string>
    <string name="your_bmi_is">Your BMI is\u0020</string>

    <string name="title_pick_exercise">Pick Your Exercise</string>
    <string name="jump_rope">Jump rope</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="for_minutes">for</string>
    <string name="minutes">minutes</string>
    <string name="youll_burn">You\'ll burn\u0020</string>
    <string name="calories">\u0020calories</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="congrats">Calorie: Good job!</string>
    <string name="youve_burned">You\'ve burned</string>
    <string name="by_doing">by doing</string>
    <string name="title_activity_main">Calorie</string>

    <string name="exercise_timer">Exercise timer</string>

    <string name="no_internet">No internet connection</string>
    <string name="this_app_needs">This app needs internet connection. Please make sure you\'re online first.</string>
    <string name="exit_app">Exit app</string>

    <string name="back">Back</string>
</resources>
