<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab.calorie.activity.PickMenuActivity"
    android:background="#000">

    <LinearLayout
        android:id="@+id/pickMenuWithIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/icon_spork"/>

        <TextView
            android:id="@+id/textViewPickYourMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_your_menu"
            android:textSize="32dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/bmrBlue"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/icon_spork"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/pick_menu_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickMenuWithIcon" />

    <LinearLayout
        android:id="@+id/pick_menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cal_so_far"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/total_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still_need"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/more_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_calories"
                    android:textSize="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_date"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="30dp"
            android:background="@color/bmrBlue"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>