<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CalculatorActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_spork_mobile_portrait" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_calculator"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_to_calculator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bmrGreen"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/bmr_calculator"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_timer"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_to_timer"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@color/bmrGreen"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:text="@string/exercise_timer"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weight_linear_layout"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_menu"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_to_menu"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@color/bmrGreen"
                android:textColor="#000"
                android:text="@string/button_see_all_menus"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculateButton"/>

            <Button
                android:id="@+id/change_language_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/button_see_all_menu_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/change_language"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>