<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SuccessSaveActivity">

    <data>
        <variable
            name="menu"
            type="com.lab.calorie.Menu" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">

        <LinearLayout
            android:id="@+id/success_save_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/icon_spork"/>

            <TextView
                android:id="@+id/textViewSuccessSaveTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success_save_title"
                android:textSize="32dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/bmrBlue"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/icon_spork"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foodMenuRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/success_save_title_layout"/>

        <TextView
            android:id="@+id/textViewFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_text_view"
            android:gravity="center"
            android:textSize="32dp"
            android:textColor="@color/bmrGreen"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/foodMenuRecyclerView"/>

        <TextView
            android:id="@+id/textViewDateMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(menu.calendarInNames)}"
            android:layout_marginTop="5dp"
            android:textSize="32dp"
            android:textColor="@color/bmrBlue"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textViewFor"/>

        <LinearLayout
            android:id="@+id/layout_menu_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/textViewDateMenu"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
            android:id="@+id/button_see_all_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_see_all_menus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/bmrGreen"
            android:textColor="#000"
            android:layout_marginRight="5dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/button_make_another_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_make_another_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/bmrGreen"
            android:textColor="#000"
            android:layout_marginLeft="5dp"
            android:padding="8dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>