<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PickDateActivity"
        android:background="#000">

        <LinearLayout
            android:id="@+id/pick_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/icon_spork"/>

            <TextView
                android:id="@+id/textViewYourMenuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_menu"
                android:textSize="32dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/bmrBlue"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/icon_spork"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/selectedFoodFragment"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/pick_date_title"
            android:background="@color/bmrGrey"/>

        <TextView
            android:id="@+id/textViewPickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simply_pick_a_date"
            android:textSize="32dp"
            android:gravity="center"
            android:textColor="@color/bmrBlue"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/selectedFoodFragment"/>

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@id/textViewPickDate"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/save_menu_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/datePicker1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/bmrGreen"
            android:text="@string/save"
            android:textColor="#000"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
